<resources>
    <string name="app_name">Tingle</string>

    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>

    <string name="username_holder">Username</string>
    <string name="profile_pic">Profile Picture</string>
    <string name="title_holder">Title</string>
    <string name="description_holder">Description</string>

    <string name="button_follow">Follow</string>
    <string name="button_followers">Followers/Following</string>
    <string name="button_likes">Liked posts</string>
    <string name="button_take_profile_pic">Take new profile picture</string>
    <string name="button_like">Like</string>
    <string name="button_unlike">Unlike</string>
    <string name="button_comment">Comment</string>

    <string name="default_likes_comments">0</string>
    <string name="like_button_description">thumbsUp</string>
    <string name="comment_hint">Comment…</string>
    <string name="comment">Comment</string>

    <string name="song_start_time">00:00</string>
    <string name="post_button_text">POST YOUR SONG</string>
    <string name="title_hint">Title</string>
    <string name="description_hint">Describe your song!</string>
    <string name="add_post">Done!</string>
    <string name="search">Find User</string>
    <string name="action_top_list">Most Liked Posts</string>

    <string name="service_not_available">Service Not Available</string>
    <string name="invalid_lat_long_used">Invalid Lat or Long used</string>
    <string name="no_address_found">No Address Found</string>
    <string name="no_geocoder_available">No Geocoder Available</string>
    <string name="address_found">Address Found</string>
    <string name="no_location_data_provided">No Location Data Provided</string>
    <string name="location">Location</string>
    <string name="position">pos</string>
    <string name="most_recent">Most Recent First</string>
    <string name="most_liked">Most Liked First</string>
    <string name="action_feed">My Feed</string>
    <string name="action_discover">Discover</string>
    <string name="action_profile">My Profile</string>
    <string name="action_logout">Log Out</string>
    <string name="action_do_post">Post A Song</string>
    <string name="new_post_retrieved">Check this post out!</string>
    <string name="shake_for_post">Shake to get a new song!</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_my_liked_posts">Songs I\'ve Liked</string>
    <string name="init_followers_count">Followers: 0</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>

</resources>
