<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_profile"
        android:orderInCategory="100"
        android:title="@string/action_profile"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_do_post"
        android:orderInCategory="100"
        android:title="@string/action_do_post"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_feed"
        android:orderInCategory="100"
        android:title="@string/action_feed"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_top_list"
        android:orderInCategory="100"
        android:title="@string/action_top_list"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_my_liked_posts"
        android:orderInCategory="100"
        android:title="@string/action_my_liked_posts"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_discover"
        android:orderInCategory="100"
        android:title="@string/action_discover"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/action_logout"
        app:showAsAction="never" />

    <item
        android:id="@+id/search"
        android:title="@string/search"
        app:showAsAction="ifRoom|collapseActionView"
        app:actionViewClass="android.support.v7.widget.SearchView"/>

</menu>
