<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:id="@+id/linearLayout">

        <ImageView
            android:id="@+id/profile_pic_view"
            android:layout_width="0dp"
            android:layout_weight="0.4"
            android:layout_height="180dp"
            android:contentDescription="@string/profile_pic"
            android:src="@mipmap/ic_launcher"/>

        <LinearLayout
            android:layout_weight="0.6"
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="fill_parent">

            <TextView
                android:id="@+id/profile_username_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/username_holder"
                android:gravity="center"
                android:textSize="32sp"
                android:textColor="@android:color/background_dark" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:showDividers="middle"
                android:divider="@drawable/feed_button_divider">

                <ImageButton
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/button_follow"
                    android:text="@string/button_follow"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".50"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="#ff557cff"
                    android:src="@mipmap/follow_50" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/button_followers"
                    android:text="@string/button_followers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="#ff557cff" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:showDividers="middle"
                android:divider="@drawable/feed_button_divider">

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/button_likes"
                    android:text="@string/button_likes"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".50"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="#ff557cff" />

                <ImageButton
                    style="?android:attr/buttonBarButtonStyle"
                    android:id="@+id/button_take_new_profile_pic"
                    android:text="@string/button_take_profile_pic"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight=".50"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:src="@mipmap/new_pic_50" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="false"
        android:layout_alignTop="@android:id/list"
        android:background="@drawable/listview_item_divider"
        android:alpha="1"
        android:visibility="visible" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/linearLayout"
        android:layout_alignParentStart="true"
        android:divider="@drawable/listview_item_divider"
        android:dividerHeight="1px"/>


</RelativeLayout>