<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:descendantFocusability="blocksDescendants"
        android:id="@+id/linearLayout2">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <Space
                android:layout_width="fill_parent"
                android:layout_height="10dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/username_holder"
                android:id="@+id/username"
                android:layout_marginBottom="5dp"
                android:gravity="center" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title_holder"
                android:id="@+id/title"
                android:gravity="center"
                android:layout_marginBottom="5dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/description_holder"
                android:id="@+id/description"
                android:gravity="center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_likes_comments"
                    android:id="@+id/likesView"
                    android:layout_weight="0.5"
                    android:gravity="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/default_likes_comments"
                    android:id="@+id/commentsView"
                    android:layout_weight="0.5"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:visibility="visible"
                android:showDividers="middle"
                android:divider="@drawable/feed_button_divider" >

                <ImageButton
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="wrap_content"
                    android:text="@string/button_like"
                    android:id="@+id/button_like"
                    android:textColor="#ff557cff"
                    android:background="?android:attr/selectableItemBackground"
                    android:src="@mipmap/not_liked_50" />

                <Button
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="0dp"
                    android:layout_weight="0.4"
                    android:layout_height="wrap_content"
                    android:text="@string/button_comment"
                    android:id="@+id/button_comment"
                    android:textColor="#ff557cff"
                    android:background="?android:attr/selectableItemBackground" />
            </LinearLayout>

            <SeekBar
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/seekBar"
                android:layout_above="@+id/listView"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/linearLayout2" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="00:00"
                android:id="@+id/songtimeView"
                android:gravity="center" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_rewind"
                    android:src="@android:drawable/ic_media_rew"
                    android:layout_weight="0.25"
                    android:clickable="false" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_play"
                    android:src="@android:drawable/ic_media_play"
                    android:layout_weight="0.25"
                    android:focusableInTouchMode="true"
                    android:focusable="true"
                    android:clickable="true" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_pause"
                    android:src="@android:drawable/ic_media_pause"
                    android:layout_weight="0.25"
                    android:clickable="false" />

                <ImageButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/button_fastforward"
                    android:src="@android:drawable/ic_media_ff"
                    android:layout_weight="0.25"
                    android:clickable="true" />

            </LinearLayout>
        </TableLayout>
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_centerHorizontal="true"
        android:layout_above="@+id/comment_edittext"
        android:layout_below="@+id/linearLayout2" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/comment_edittext"
        android:editable="false"
        android:focusable="true"
        android:enabled="true"
        android:inputType="text"
        android:hint="@string/comment_hint"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:focusableInTouchMode="true" />

</RelativeLayout>